--- a/M4Jam/Base.lproj/Main.storyboard
+++ b/M4Jam/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="M4Jam" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mainPage" id="BYZ-38-t0r" customClass="ViewController" customModule="M4Jam" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,12 +20,64 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.2326875627040863" green="0.28969058394432068" blue="0.32258245348930359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
+        <!--Connection View Controller-->
+        <scene sceneID="EVt-X7-bXn">
+            <objects>
+                <viewController storyboardIdentifier="NoConnection" id="bKv-A1-6Rk" customClass="ConnectionViewController" customModule="M4Jam" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qma-GN-nuv"/>
+                        <viewControllerLayoutGuide type="bottom" id="xhC-hw-0p8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LLo-Tb-rRV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You Are Not Connected To The Internet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Oj-od-nUa">
+                                <rect key="frame" x="38" y="252" width="301" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.52152097225189209" green="0.52159911394119263" blue="0.52150380611419678" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IW5-x6-MrK">
+                                <rect key="frame" x="148" y="303" width="81" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="81" id="T4G-eF-FaT"/>
+                                </constraints>
+                                <state key="normal" title="Try Again">
+                                    <color key="titleColor" red="0.52152097230000005" green="0.52159911390000002" blue="0.52150380610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="refreshButton:" destination="bKv-A1-6Rk" eventType="touchUpInside" id="vb0-rK-bbE"/>
+                                </connections>
+                            </button>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="wifi-3" translatesAutoresizingMaskIntoConstraints="NO" id="Odm-7k-sOe">
+                                <rect key="frame" x="124" y="94" width="128" height="128"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96462160348892212" green="0.96475988626480103" blue="0.96459132432937622" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Odm-7k-sOe" firstAttribute="centerX" secondItem="1Oj-od-nUa" secondAttribute="centerX" id="9Hm-pm-U8P"/>
+                            <constraint firstItem="Odm-7k-sOe" firstAttribute="top" secondItem="qma-GN-nuv" secondAttribute="bottom" constant="74" id="DFU-fM-e5p"/>
+                            <constraint firstItem="Odm-7k-sOe" firstAttribute="centerX" secondItem="LLo-Tb-rRV" secondAttribute="centerX" id="LOx-0N-dNL"/>
+                            <constraint firstItem="IW5-x6-MrK" firstAttribute="top" secondItem="1Oj-od-nUa" secondAttribute="bottom" constant="30" id="WaJ-sK-slL"/>
+                            <constraint firstItem="1Oj-od-nUa" firstAttribute="top" secondItem="Odm-7k-sOe" secondAttribute="bottom" constant="30" id="h1n-HW-eoe"/>
+                            <constraint firstItem="1Oj-od-nUa" firstAttribute="centerX" secondItem="IW5-x6-MrK" secondAttribute="centerX" id="yiH-zp-Zhb"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UZA-mc-OOx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="916" y="-34.632683658170919"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="wifi-3" width="128" height="128"/>
+    </resources>
 </document>
